@@ -18,10 +18,8 @@ import com.powsybl.commons.parameters.ParameterDefaultValueConfig;
 import com.powsybl.commons.parameters.ParameterType;
 import com.powsybl.commons.reporter.Reporter;
 import com.powsybl.commons.xml.XmlUtil;
-import com.powsybl.iidm.network.Exporter;
-import com.powsybl.iidm.network.Network;
-import com.powsybl.iidm.network.TopologyKind;
-import com.powsybl.iidm.network.VoltageLevel;
+import com.powsybl.iidm.network.*;
+import com.powsybl.triplestore.api.PropertyBag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -37,7 +35,7 @@ import java.util.stream.Collectors;
 import static com.powsybl.cgmes.conversion.CgmesReports.inconsistentProfilesTPRequiredReport;
 
 /**
- * @author Luma Zamarreño <zamarrenolm at aia.es>
+ * @author Luma Zamarreño {@literal <zamarrenolm at aia.es>}
  */
 @AutoService(Exporter.class)
 public class CgmesExport implements Exporter {
@@ -45,9 +43,12 @@ public class CgmesExport implements Exporter {
     private static final String INDENT = "    ";
 
     private final ParameterDefaultValueConfig defaultValueConfig;
+    private final CgmesImport importer;
 
     public CgmesExport(PlatformConfig platformConfig) {
         defaultValueConfig = new ParameterDefaultValueConfig(platformConfig);
+        // We may need to import the boundaries to be able to export proper references
+        importer = new CgmesImport(platformConfig);
     }
 
     public CgmesExport() {
@@ -67,15 +68,56 @@ public class CgmesExport implements Exporter {
         String filenameTp = baseName + "_TP.xml";
         String filenameSsh = baseName + "_SSH.xml";
         String filenameSv = baseName + "_SV.xml";
+
+        // Reference data (if required) will come from imported boundaries
+        // We may have received a sourcing actor as a parameter
+        String sourcingActorName = Parameter.readString(getFormat(), params, SOURCING_ACTOR_PARAMETER, defaultValueConfig);
+        String countryName = null;
+        if (sourcingActorName == null || sourcingActorName.isEmpty()) {
+            // If not given explicitly,
+            // the reference data provider can try to obtain it from the country of the network
+            // If we have multiple countries we do not pass this info to the reference data provider
+            Set<String> countries = network.getSubstationStream()
+                    .map(Substation::getCountry)
+                    .flatMap(Optional::stream)
+                    .map(Enum::name)
+                    .collect(Collectors.toUnmodifiableSet());
+            if (countries.size() == 1) {
+                countryName = countries.iterator().next();
+            }
+        }
+        ReferenceDataProvider referenceDataProvider = new ReferenceDataProvider(sourcingActorName, countryName, importer, params);
+
         CgmesExportContext context = new CgmesExportContext(
                 network,
+                referenceDataProvider,
                 NamingStrategyFactory.create(Parameter.readString(getFormat(), params, NAMING_STRATEGY_PARAMETER, defaultValueConfig)))
                 .setExportBoundaryPowerFlows(Parameter.readBoolean(getFormat(), params, EXPORT_BOUNDARY_POWER_FLOWS_PARAMETER, defaultValueConfig))
                 .setExportFlowsForSwitches(Parameter.readBoolean(getFormat(), params, EXPORT_POWER_FLOWS_FOR_SWITCHES_PARAMETER, defaultValueConfig))
+                .setExportTransformersWithHighestVoltageAtEnd1(Parameter.readBoolean(getFormat(), params, EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_PARAMETER, defaultValueConfig))
                 .setEncodeIds(Parameter.readBoolean(getFormat(), params, ENCODE_IDS_PARAMETERS, defaultValueConfig))
-                .setBoundaryEqId(getBoundaryId("EQ", network, params, BOUNDARY_EQ_ID_PARAMETER))
-                .setBoundaryTpId(getBoundaryId("TP", network, params, BOUNDARY_TP_ID_PARAMETER))
+                .setBoundaryEqId(getBoundaryId("EQ", network, params, BOUNDARY_EQ_ID_PARAMETER, referenceDataProvider))
+                .setBoundaryTpId(getBoundaryId("TP", network, params, BOUNDARY_TP_ID_PARAMETER, referenceDataProvider))
                 .setReporter(reporter);
+
+        // If sourcing actor data has been found and the modeling authority set has not been specified explicitly, set it
+        String masUri = Parameter.readString(getFormat(), params, MODELING_AUTHORITY_SET_PARAMETER, defaultValueConfig);
+        PropertyBag sourcingActor = referenceDataProvider.getSourcingActor();
+        if (sourcingActor.containsKey("masUri") && masUri.equals(DEFAULT_MODELING_AUTHORITY_SET_VALUE)) {
+            masUri = sourcingActor.get("masUri");
+        }
+
+        context.getEqModelDescription().setModelingAuthoritySet(masUri);
+        context.getTpModelDescription().setModelingAuthoritySet(masUri);
+        context.getSshModelDescription().setModelingAuthoritySet(masUri);
+        context.getSvModelDescription().setModelingAuthoritySet(masUri);
+        String modelDescription = Parameter.readString(getFormat(), params, MODEL_DESCRIPTION_PARAMETER, defaultValueConfig);
+        if (modelDescription != null) {
+            context.getEqModelDescription().setDescription(modelDescription);
+            context.getTpModelDescription().setDescription(modelDescription);
+            context.getSshModelDescription().setDescription(modelDescription);
+            context.getSvModelDescription().setDescription(modelDescription);
+        }
         String cimVersionParam = Parameter.readString(getFormat(), params, CIM_VERSION_PARAMETER, defaultValueConfig);
         if (cimVersionParam != null) {
             context.setCimVersion(Integer.parseInt(cimVersionParam));
@@ -122,18 +164,27 @@ public class CgmesExport implements Exporter {
         }
     }
 
-    private String getBoundaryId(String profile, Network network, Properties params, Parameter parameter) {
+    private String getBoundaryId(String profile, Network network, Properties params, Parameter parameter, ReferenceDataProvider referenceDataProvider) {
         if (network.hasProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + profile + "_BD_ID")) {
             return network.getProperty(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + profile + "_BD_ID");
         }
-        return Parameter.readString(getFormat(), params, parameter, defaultValueConfig);
+        String id = Parameter.readString(getFormat(), params, parameter, defaultValueConfig);
+        // If not specified through a parameter, try to load it from reference data
+        if (id == null && referenceDataProvider != null) {
+            if ("EQ".equals(profile)) {
+                id = referenceDataProvider.getEquipmentBoundaryId();
+            } else if ("TP".equals(profile)) {
+                id = referenceDataProvider.getTopologyBoundaryId();
+            }
+        }
+        return id;
     }
 
     private static void addProfilesIdentifiers(Network network, String profile, CgmesExportContext.ModelDescription description) {
         description.setIds(network.getPropertyNames().stream()
                 .filter(p -> p.startsWith(Conversion.CGMES_PREFIX_ALIAS_PROPERTIES + profile + "_ID"))
                 .map(network::getProperty)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private static void checkConsistency(List<String> profiles, Network network, CgmesExportContext context) {
@@ -177,6 +228,11 @@ public class CgmesExport implements Exporter {
     public static final String EXPORT_POWER_FLOWS_FOR_SWITCHES = "iidm.export.cgmes.export-power-flows-for-switches";
     public static final String NAMING_STRATEGY = "iidm.export.cgmes.naming-strategy";
     public static final String PROFILES = "iidm.export.cgmes.profiles";
+    public static final String MODELING_AUTHORITY_SET = "iidm.export.cgmes.modeling-authority-set";
+    public static final String MODEL_DESCRIPTION = "iidm.export.cgmes.model-description";
+    public static final String EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1 = "iidm.export.cgmes.export-transformers-with-highest-voltage-at-end1";
+    public static final String SOURCING_ACTOR = "iidm.export.cgmes.sourcing-actor";
+    private static final String DEFAULT_MODELING_AUTHORITY_SET_VALUE = "powsybl.org";
 
     private static final Parameter BASE_NAME_PARAMETER = new Parameter(
             BASE_NAME,
@@ -193,17 +249,17 @@ public class CgmesExport implements Exporter {
             ENCODE_IDS,
             ParameterType.BOOLEAN,
             "Encode IDs as valid URI",
-            Boolean.TRUE);
+            CgmesExportContext.ENCODE_IDS_DEFAULT_VALUE);
     private static final Parameter EXPORT_BOUNDARY_POWER_FLOWS_PARAMETER = new Parameter(
             EXPORT_BOUNDARY_POWER_FLOWS,
             ParameterType.BOOLEAN,
             "Export boundaries' power flows",
-            Boolean.TRUE);
+            CgmesExportContext.EXPORT_BOUNDARY_POWER_FLOWS_DEFAULT_VALUE);
     private static final Parameter EXPORT_POWER_FLOWS_FOR_SWITCHES_PARAMETER = new Parameter(
             EXPORT_POWER_FLOWS_FOR_SWITCHES,
             ParameterType.BOOLEAN,
             "Export power flows for switches",
-            Boolean.FALSE);
+            CgmesExportContext.EXPORT_POWER_FLOWS_FOR_SWITCHES_DEFAULT_VALUE);
     private static final Parameter NAMING_STRATEGY_PARAMETER = new Parameter(
             NAMING_STRATEGY,
             ParameterType.STRING,
@@ -226,6 +282,27 @@ public class CgmesExport implements Exporter {
             ParameterType.STRING,
             "Boundary TP model identifier",
             null);
+    private static final Parameter MODELING_AUTHORITY_SET_PARAMETER = new Parameter(
+            MODELING_AUTHORITY_SET,
+            ParameterType.STRING,
+            "Modeling authority set",
+            DEFAULT_MODELING_AUTHORITY_SET_VALUE);
+    private static final Parameter MODEL_DESCRIPTION_PARAMETER = new Parameter(
+            MODEL_DESCRIPTION,
+            ParameterType.STRING,
+            "Model description",
+            null);
+    private static final Parameter SOURCING_ACTOR_PARAMETER = new Parameter(
+            SOURCING_ACTOR,
+            ParameterType.STRING,
+            "Sourcing actor name (for CGM business processes)",
+            null);
+
+    private static final Parameter EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_PARAMETER = new Parameter(
+            EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1,
+            ParameterType.BOOLEAN,
+            "Export transformers with highest voltage at end1",
+            CgmesExportContext.EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_DEFAULT_VALUE);
 
     private static final List<Parameter> STATIC_PARAMETERS = List.of(
             BASE_NAME_PARAMETER,
@@ -235,7 +312,11 @@ public class CgmesExport implements Exporter {
             NAMING_STRATEGY_PARAMETER,
             PROFILES_PARAMETER,
             BOUNDARY_EQ_ID_PARAMETER,
-            BOUNDARY_TP_ID_PARAMETER);
+            BOUNDARY_TP_ID_PARAMETER,
+            MODELING_AUTHORITY_SET_PARAMETER,
+            MODEL_DESCRIPTION_PARAMETER,
+            EXPORT_TRANSFORMERS_WITH_HIGHEST_VOLTAGE_AT_END1_PARAMETER,
+            SOURCING_ACTOR_PARAMETER);
 
     private static final Logger LOG = LoggerFactory.getLogger(CgmesExport.class);
 }
